--- a/3-Python-for-Data-Analysis - light/NumPy/2-Numpy Indexing and Selection.ipynb
+++ b/3-Python-for-Data-Analysis - light/NumPy/2-Numpy Indexing and Selection.ipynb
@@ -149,7 +149,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Reset array, we'll see why I had to reset in  a moment\n",
+    "arr = np.arange(0,11)\n",
+    "print (arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#Important notes on Slices\n",
+    "slice_of_arr = arr[:]\n",
+    "print(slice_of_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,18 +198,12 @@
        "array([ 0, 99, 99, 99,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reset array, we'll see why I had to reset in  a moment\n",
-    "arr = np.arange(0,11)\n",
-    "\n",
-    "#Important notes on Slices\n",
-    "slice_of_arr = arr[:]\n",
-    "\n",
     "#Change Slice\n",
     "slice_of_arr[1:4] = 99\n",
     "\n",
@@ -182,6 +216,23 @@
    "metadata": {},
    "source": [
     "Base object if memory is from some other object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 99 99 99  4  5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr)"
    ]
   },
   {
@@ -240,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +300,7 @@
        "array([   0, 9999, 9999, 9999])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +349,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
