--- a/3-Python-for-Data-Analysis/NumPy/1-NumPy Arrays.ipynb
+++ b/3-Python-for-Data-Analysis/NumPy/1-NumPy Arrays.ipynb
@@ -836,7 +836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('dna_2022_23')",
    "language": "python",
    "name": "python3"
   },
@@ -850,7 +850,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "35d1c3afbf7dd3b9b2ba9a07c5b6be33bade25125d4bf637af8e552dd4df8fd1"
+   }
   }
  },
  "nbformat": 4,
