--- a/3-Python-for-Data-Analysis/NumPy/2-Numpy Indexing and Selection.ipynb
+++ b/3-Python-for-Data-Analysis/NumPy/2-Numpy Indexing and Selection.ipynb
@@ -1393,7 +1393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -1407,7 +1407,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e743294b9eb9579c1dbfa440bf1529440bbf17bdd5f490c626f9a31cee6b9bc4"
+   }
   }
  },
  "nbformat": 4,
